@@ -2,6 +2,9 @@
 	- Squelch EADDRNOTAVAIL errors when the interface goes away,
 	  this omits 'can't assign requested address' errors unless
 	  verbosity is set to a high value.
+	- Set default for so-reuseport to no for FreeBSD.  It is enabled
+	  by default for Linux and DragonFlyBSD.  The setting can 
+	  be configured in unbound.conf to override the default.
 
 2 October 2018: Wouter
 	- updated contrib/fastrpz.patch to apply for this version
